--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>ถึงคนอ่าน</strong>
+                        <strong>FOR YOU</strong>
                         <p>
-                           เปิดหาพ่อเมิงหรอ ?
+                          I LOVE YOU 💕
                         </p>
                     </div>
                 </div>
